# acid-rain

./: .gitignore  Cargo.toml  GNUmakefile  README.md  TODO  cabal.project
builtin/: Cargo.toml  acid-rain-builtin.cabal
builtin/Game/AcidRain/Module/: Builtin.hs
builtin/Game/AcidRain/Module/Builtin/: Biomes.hs  ChunkGen.hs  Commands.hs  Entities.hs  Entity.hs  Tiles.hs
builtin/Game/AcidRain/Module/Builtin/ChunkGen/: PointAttrs.hs  SpaceAttr.hs  SpaceAttrs.hs  WorldInfo.hs
builtin/Game/AcidRain/Module/Builtin/Commands/: TH.hs
builtin/Game/AcidRain/Module/Builtin/Loader/: Entity.hs  Tile.hs
builtin/Game/AcidRain/Module/Builtin/Window/HUD/: DebugInfo.hs
builtin/src/: loader.rs
builtin/src/loader/: tile.rs
client/: Cargo.toml  acid-rain-client.cabal
client/Game/AcidRain/TUI/: AppEvent.hs  Client.hs
client/Game/AcidRain/TUI/Widgets/: WorldView.hs
client/src/tui/view/: world.rs
core/: Cargo.toml  acid-rain-core.cabal
core/Control/Concurrent/Cache/: LRU.hs
core/Control/Eff/: Instances.hs
core/Control/Eff/Instances/: Catch.hs
core/Data/: Upcastable.hs
core/Data/MultiHashMap/Set/: Strict.hs
core/Data/Poly/: Strict.hs
core/Game/AcidRain/: Module.hs  TUI.hs  World.hs  World.hs-boot
core/Game/AcidRain/Module/: Loader.hs  Types.hs
core/Game/AcidRain/TUI/: Keystroke.hs  Window.hs
core/Game/AcidRain/World/: Biome.hs  Chunk.hs  Climate.hs  Command.hs  Direction.hs  Entity.hs  Event.hs  Player.hs  Position.hs  Tile.hs
core/Game/AcidRain/World/Biome/: Palette.hs  Registry.hs
core/Game/AcidRain/World/Chunk/: Generator.hs  Palette.hs  Position.hs  Types.hs
core/Game/AcidRain/World/Command/: Registry.hs
core/Game/AcidRain/World/Entity/: Catalogue.hs  Registry.hs
core/Game/AcidRain/World/Tile/: Palette.hs  Registry.hs
core/Language/Haskell/TH/Lift/: Set.hs
core/Numeric/Noise/: FBM.hs  OpenSimplex.hs  Voronoi.hs
core/src/: lib.rs  module.rs  tui.rs  world.rs
core/src/module/: loader.rs
core/src/world/: chunk.rs  player.rs  position.rs  tile.rs
core/src/world/chunk/: manager.rs  offset.rs  palette.rs  position.rs
core/src/world/tile/: registry.rs  state.rs
ctk/: Cargo.toml
ctk/src/: attribute.rs  border.rs  color.rs  component.rs  dimension.rs  event.rs  graphics.rs  layout.rs  lib.rs  symbol.rs  util.rs  window.rs
ctk/src/border/: button_border.rs  null_border.rs
ctk/src/color/: manager.rs
ctk/src/component/: button.rs  label.rs  panel.rs
ctk/src/dimension/: dimension.rs  insets.rs  point.rs  rectangle.rs  requirements.rs
ctk/src/event/: bus.rs  input.rs
ctk/src/event/input/: key.rs
ctk/src/graphics/: attribute.rs
ctk/src/layout/: grid_layout.rs  group_layout.rs  spring_layout.rs
ctk/src/layout/spring_layout/: constraints.rs  spring.rs
ctk/src/layout/spring_layout/spring/: implementation.rs
ctk/src/window/: root_window.rs
server/: Cargo.toml  acid-rain-server.cabal
server/Game/AcidRain/World/: Local.hs
server/Game/AcidRain/World/Chunk/Manager/: Local.hs
server/Game/AcidRain/World/Player/Manager/: Local.hs
server/src/: world.rs
server/src/world/: local.rs
server/src/world/chunk/: manager.rs
server/src/world/chunk/manager/: local.rs  server.rs
src/: ctk.rs  main.rs  module.rs  world.rs
src/builtin/: loader.rs
src/builtin/loader/: tile.rs
src/builtin/loaders/: tile.rs
src/ctk/: alignment.rs  border.rs  buffer.rs  component.rs  dimension.rs  dimensions.rs  graphics.rs  layout.rs  util.rs  window.rs
src/ctk/border/: button_border.rs  null_border.rs
src/ctk/component/: button.rs  label.rs  panel.rs
src/ctk/dimension/: dimension.rs  insets.rs  point.rs  rectangle.rs  requirements.rs
src/ctk/dimensions/: insets.rs
src/ctk/layout/: grid_layout.rs  spring_layout.rs
src/ctk/layout/spring_layout/: constraints.rs  spring.rs
src/ctk/window/: root_window.rs
src/gui/view/: world.rs
src/module/: loader.rs
src/module/loader/: tile.rs
src/world/: chunk.rs  tile.rs
src/world/chunk/: palette.rs
src/world/tile/: registry.rs
