[package]
name = "acid-rain"
version = "0.1.0"
authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "TTY-based factory simulation game"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

readme = "README.md"

[dependencies]
clap = "~2.33"
lazy_static = "~1.4"
libc = "~0.2"
ncurses = "~5.99"
unicode-width = "~0.1"

[features]
default = ["unicode"]

# Try to use Unicode capability of the terminal. Requires libncursesw.
unicode = ["ncurses/wide"]

[badges]
maintenance = { status = "experimental" }
