[package]
name = "acid-rain"
version = "0.1.0"
authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "TTY-based factory simulation game"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

readme = "README.md"

[dependencies]
clap = "^2.33"
ctk = { path = "ctk" }
rain_builtin = { path = "builtin", package = "acid-rain-builtin" }
rain_client = { path = "client", package = "acid-rain-client" }
rain_core = { path = "core", package = "acid-rain-core" }
rain_server = { path = "server", package = "acid-rain-server" }
tokio = { version = "^1.2", features = ["macros", "rt-multi-thread"] }

[workspace]
members = ["builtin", "client", "ctk", "core"]

[badges]
maintenance = { status = "experimental" }
