cabal-version:       2.4

name:                acid-rain-builtin
version:             0.1.0.0
synopsis:            Built-in assets for Acid Rain
-- bug-reports:
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Game.AcidRain.Module.Builtin
    Game.AcidRain.Module.Builtin.Entity

  other-modules:
    Game.AcidRain.Module.Builtin.ChunkGen
    Game.AcidRain.Module.Builtin.Loader.Entity
    Game.AcidRain.Module.Builtin.Loader.Tile

  build-depends:
    base                 ==  4.*,
    base-unicode-symbols ^>= 0.2.4.2,
    acid-rain-core       ^>= 0.1.0.0,
    extensible-effects   ^>= 5.0.0.1,
    microlens            ^>= 0.4.12.0,
    primitive            ^>= 0.7.0.0

  default-language:    Haskell2010
  ghc-options:
      -Wall
