cabal-version:       2.4

name:                acid-rain-builtin
version:             0.1.0.0
synopsis:            Built-in assets for Acid Rain
homepage:            https://github.com/depressed-pho/acid-rain
bug-reports:         https://github.com/depressed-pho/acid-rain/issues
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/depressed-pho/acid-rain.git

library
  exposed-modules:
    Game.AcidRain.Module.Builtin
    Game.AcidRain.Module.Builtin.Entities

  other-modules:
    Game.AcidRain.Module.Builtin.ChunkGen
    Game.AcidRain.Module.Builtin.ChunkGen.PointAttrs
    Game.AcidRain.Module.Builtin.ChunkGen.WorldInfo
    Game.AcidRain.Module.Builtin.Biomes
    Game.AcidRain.Module.Builtin.Commands
    Game.AcidRain.Module.Builtin.Commands.TH
    Game.AcidRain.Module.Builtin.Tiles
    Game.AcidRain.Module.Builtin.Window.HUD.DebugInfo

  build-depends:
    base                 ==  4.*,
    acid-rain-core       ^>= 0.1.0.0,
    base-unicode-symbols ^>= 0.2.4.2,
    brick                ^>= 0.60.2,
    convertible          ^>= 1.1.1.0,
    exceptions           ^>= 0.10.4,
    extensible-effects   ^>= 5.0.0.1,
    microlens            ^>= 0.4.12.0,
    microlens-th         ^>= 0.4.3.9,
    primitive            ^>= 0.7.0.0,
    text                 ^>= 1.2.4.0,
    template-haskell     ^>= 2.15.0.0,
    th-compat            ^>= 0.1.2,
    unordered-containers ^>= 0.2.10.0,
    uuid                 ^>= 1.3.14

  default-language:    Haskell2010
  ghc-options:
      -Wall
