[package]
name = "acid-rain-client"
version = "0.1.0"

authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "Acid Rain client-side code"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

[dependencies]
ctk = { path = "../ctk" }
rain-core = { path = "../core", package = "acid-rain-core" }

[badges]
maintenance = { status = "experimental" }
