cabal-version:       2.4

name:                acid-rain-client
version:             0.1.0.0
synopsis:            Acid Rain client-side code
-- bug-reports:
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Game.AcidRain.TUI.Widgets.WorldView

  other-modules:

  build-depends:
    base                 ==  4.*,
    acid-rain-core       ^>= 0.1.0.0,
    base-unicode-symbols ^>= 0.2.4.2,
    brick                ^>= 0.60.2

  default-language:    Haskell2010
  ghc-options:
      -Wall
