[package]
name = "acid-rain-core"
version = "0.1.0"

authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "Common code shared by Acid Rain client, server, and mods"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

[dependencies]
lazy_static = "~1.4"

[badges]
maintenance = { status = "experimental" }
