[package]
name = "acid-rain-core"
version = "0.1.0"

authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "Common code shared by Acid Rain client, server, and mods"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

[dependencies]
async-trait = "^0.1"
ctk = { path = "../ctk" }
num = "^0.2"
unicode-width = "^0.1"
uuid = { version = "^0.8", features = ["v4"] }

[badges]
maintenance = { status = "experimental" }
