cabal-version:       2.4

name:                acid-rain-core
version:             0.1.0.0
synopsis:            Common code shared by Acid Rain client, server, and mods
-- bug-reports:
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Game.AcidRain.Module
    Game.AcidRain.Module.Loader
    Game.AcidRain.TUI
    Game.AcidRain.World
    Game.AcidRain.World.Chunk
    Game.AcidRain.World.Chunk.Position
    Game.AcidRain.World.Chunk.Palette
    Game.AcidRain.World.Player
    Game.AcidRain.World.Position
    Game.AcidRain.World.Tile
    Game.AcidRain.World.Tile.Registry

  other-modules:
    Data.Upcastable
    Game.AcidRain.Module.Types

  build-depends:
    base                 ==  4.*,
    base-unicode-symbols ^>= 0.2.4.2,
    containers           ^>= 0.6.2.1,
    convertible          ^>= 1.1.1.0,
    hashable             ^>= 1.3.0.0,
    exceptions           ^>= 0.10.4,
    text                 ^>= 1.2.4.0,
    mono-traversable     ^>= 1.0.15.1,
    mtl                  ^>= 2.2.2,
    unordered-containers ^>= 0.2.10.0,
    uuid                 ^>= 1.3.14,
    vector               ^>= 0.12.0.3,
    vty                  ^>= 5.33

  default-language:    Haskell2010
  ghc-options:
      -Wall
