cabal-version:       2.4

name:                acid-rain-core
version:             0.1.0.0
synopsis:            Common code shared by Acid Rain client, server, and mods
-- bug-reports:
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

library
  exposed-modules:
    Control.Eff.Instances.Catch
    Game.AcidRain.Module
    Game.AcidRain.Module.Loader
    Game.AcidRain.TUI
    Game.AcidRain.World
    Game.AcidRain.World.Chunk
    Game.AcidRain.World.Chunk.Generator
    Game.AcidRain.World.Chunk.Position
    Game.AcidRain.World.Chunk.Palette
    Game.AcidRain.World.Climate
    Game.AcidRain.World.Entity
    Game.AcidRain.World.Entity.Catalogue
    Game.AcidRain.World.Entity.Registry
    Game.AcidRain.World.Event
    Game.AcidRain.World.Player
    Game.AcidRain.World.Position
    Game.AcidRain.World.Tile
    Game.AcidRain.World.Tile.Registry
    Numeric.Noise.FBM
    Numeric.Noise.OpenSimplex
    Numeric.Noise.Voronoi

  other-modules:
    Data.Upcastable
    Game.AcidRain.Module.Types
    Game.AcidRain.World.Chunk.Types

  build-depends:
    base                 ==  4.*,
    base-unicode-symbols ^>= 0.2.4.2,
    colour               ^>= 2.3.5,
    containers           ^>= 0.6.2.1,
    convertible          ^>= 1.1.1.0,
    data-default         ^>= 0.7.1.1,
    exceptions           ^>= 0.10.4,
    extensible-effects   ^>= 5.0.0.1,
    hashable             ^>= 1.3.0.0,
    text                 ^>= 1.2.4.0,
    microlens            ^>= 0.4.12.0,
    microlens-th         ^>= 0.4.3.9,
    mono-traversable     ^>= 1.0.15.1,
    primitive            ^>= 0.7.1.0,
    random               ^>= 1.2.0,
    typerep-map          ^>= 0.3.3.0,
    unordered-containers ^>= 0.2.10.0,
    uuid                 ^>= 1.3.14,
    vector               ^>= 0.12.0.3,
    vty                  ^>= 5.33

  default-language:    Haskell2010
  ghc-options:
      -Wall
