[package]
name = "ctk"
version = "0.1.0"

authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "TUI toolkit roughly resembling Swing"
keywords = ["tui"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain/ctk"
repository = "https://github.com/depressed-pho/acid-rain.git"

[dependencies]
color_space = "^0.5"
downcast-rs = "^1.2"
fixed-map = "^0.7"
lazy_static = "^1.4"
libc = "^0.2"
lru = "^0.6"
ncurses = "^5.101"
num-traits = "^0.2"
scan_fmt = "^0.2"
tokio = { version = "^1.2", features = ["macros", "net", "signal", "rt"] }
unicode-width = "^0.1"
weak-table = "^0.3"

# To resolve conflicts between fixed-map and tokio-macros.
proc-macro2 = "^1.0.7"

[features]
default = ["unicode", "extended-colors"]

# Try to use Unicode capability of the terminal if possible. Requires
# libncursesw.
unicode = ["ncurses/wide"]

# Use the extended colors capability of ncurses.
extended-colors = ["ncurses/extended_colors"]

[badges]
maintenance = { status = "experimental" }
