[package]
name = "acid-rain-server"
version = "0.1.0"

authors = ["PHO <pho at cielonegro dot org>"]
edition = "2018"

description = "Acid Rain server-side code"
keywords = ["game"]
license = "CC0-1.0"

homepage = "https://github.com/depressed-pho/acid-rain"
repository = "https://github.com/depressed-pho/acid-rain.git"

[dependencies]
async-trait = "^0.1"
rain_builtin = { path = "../builtin", package = "acid-rain-builtin" }
rain-core = { path = "../core", package = "acid-rain-core" }

[badges]
maintenance = { status = "experimental" }
