cabal-version:       2.4

name:                acid-rain-server
version:             0.1.0.0
synopsis:            Acid Rain server-side code
homepage:            https://github.com/depressed-pho/acid-rain
bug-reports:         https://github.com/depressed-pho/acid-rain/issues
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/depressed-pho/acid-rain.git

library
  exposed-modules:
    Game.AcidRain.World.Local

  other-modules:
    Game.AcidRain.World.Chunk.Manager.Local
    Game.AcidRain.World.Player.Manager.Local

  build-depends:
    base                 ==  4.*,
    acid-rain-builtin    ^>= 0.1.0.0,
    acid-rain-core       ^>= 0.1.0.0,
    base-unicode-symbols ^>= 0.2.4.2,
    clock                ^>= 0.8.2,
    convertible          ^>= 1.1.1.0,
    exceptions           ^>= 0.10.4,
    focus                ^>= 1.0.2,
    microlens            ^>= 0.4.12.0,
    stm                  ^>= 2.5.0.0,
    stm-containers       ^>= 1.2,
    stm-delay            ^>= 0.1.1.1,
    text                 ^>= 1.2.4.0,
    uuid                 ^>= 1.3.14,
    unordered-containers ^>= 0.2.10.0

  default-language:    Haskell2010
  ghc-options:
      -Wall
