cabal-version:       2.4

name:                acid-rain-server
version:             0.1.0.0
synopsis:            Acid Rain server-side code
homepage:            https://github.com/depressed-pho/acid-rain
bug-reports:         https://github.com/depressed-pho/acid-rain/issues
license:             CC0-1.0
license-file:        LICENSE
author:              PHO
maintainer:          pho@cielonegro.org
category:            Game
extra-source-files:  CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/depressed-pho/acid-rain.git

library
  exposed-modules:
    Game.AcidRain.World.Local

  other-modules:
    Game.AcidRain.World.Chunk.Manager.Local
    Game.AcidRain.World.Player.Manager.Local

  build-depends:
    base                 ==  4.*,
    acid-rain-core       ^>= 0.1.0.0,
    base-unicode-symbols ^>= 0.2.4.2,
    convertible          ^>= 1.1.1.0,
    deferred-folds       ^>= 0.9.17,
    exceptions           ^>= 0.10.4,
    extensible-effects   ^>= 5.0.0.1,
    focus                ^>= 1.0.2,
    hashable             ^>= 1.3.0.0,
    microlens            ^>= 0.4.12.0,
    microlens-th         ^>= 0.4.3.9,
    random               ^>= 1.2.0,
    stm                  ^>= 2.5.0.0,
    stm-containers       ^>= 1.2,
    stm-delay            ^>= 0.1.1.1,
    text                 ^>= 1.2.4.0,
    uuid                 ^>= 1.3.14,
    unordered-containers ^>= 0.2.10.0

  default-language:    Haskell2010
  ghc-options:
      -Wall
